--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "json-loader": "^0.5.7",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
