--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "concurrently": "^7.6.0",
     "json-loader": "^0.5.7",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
