--- a/package.json
+++ b/package.json
@@ -18,7 +18,17 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonschema": "^1.2.6",
+    "morgan": "^1.10.0",
+    "pg": "^8.3.0"
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"cd src; node server.js\"",
